fixed unexpected token error

--- a/pigDiceGame.html
+++ b/pigDiceGame.html
@@ -39,30 +39,20 @@
 <h1>Pig Dice</h1>
 
 
-<!---------------------------------------------------------------------------------
- !
- !  Configuration menu
- !
- !--------------------------------------------------------------------------------->
+<!-- configuration menu -->
 <div id="configuration">
 
-    <!--
-    TODO:  Put your configuration form / page here
-    
-     -->
-
+    <!-- TODO:  Put your configuration form / page here -->
+sdfsdfsdfsdf
 </div>
 
-<!---------------------------------------------------------------------------------
- !
- !  The game
- !
- !--------------------------------------------------------------------------------->
+<!-- ---------------------------------------------------------------------------------
+
+   The game
+
+ ------------------------------------------------------------------------------- -->
 <div id="board" class="game_board">
-    <!--
-       TODO:  Put your game board here
-       
-       -->
+    <!-- TODO:  Put your game board here   -->
 </div>
 </body>
 </html>
