--- a/pigDiceGame.html
+++ b/pigDiceGame.html
@@ -2,29 +2,32 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>PigDice</title>
-    <link rel="stylesheet" type="text/css" href="pigDice.css"/>
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pig Dice</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="pigDice.css" />
     <script type="text/javascript" src="javascript/lib/underscore-min.js"></script>
 
-
     <!-- The PigGameConfig triad -->
-    <script type="text/javascript" src="javascript/PigGameConfig/PigGameConfig.js"></script>
-    <script type="text/javascript" src="javascript/PigGameConfig/PigGameConfig.view.js"></script>
-    <script type="text/javascript" src="javascript/PigGameConfig/PigGameConfig.controller.js"></script>
+    <script src="javascript/PigGameConfig/PigGameConfig.js"></script>
+    <script src="javascript/PigGameConfig/PigGameConfig.view.js"></script>
+    <script src="javascript/PigGameConfig/PigGameConfig.controller.js"></script>
     <!-- This triad has no model. -->
 
-    <script type="text/javascript" src="javascript/Player.js"></script>
+    <script src="javascript/Player.js"></script>
 
     <!-- The GameDie triad -->
-    <script type="text/javascript" src="javascript/GameDie/GameDie.js"></script>
-    <script type="text/javascript" src="javascript/GameDie/GameDie.model.js"></script>
-    <script type="text/javascript" src="javascript/GameDie/GameDie.view.js"></script>
+    <script src="javascript/GameDie/GameDie.js"></script>
+    <script src="javascript/GameDie/GameDie.model.js"></script>
+    <script src="javascript/GameDie/GameDie.view.js"></script>
 
     <!-- The PigGame triad -->
-    <script type="text/javascript" src="javascript/PigGame/PigGame.js"></script>
-    <script type="text/javascript" src="javascript/PigGame/PigGame.controller.js"></script>
-    <script type="text/javascript" src="javascript/PigGame/PigGame.view.js"></script>
-    <script type="text/javascript" src="javascript/PigGame/PigGame.model.js"></script>
+    <script src="javascript/PigGame/PigGame.js"></script>
+    <script src="javascript/PigGame/PigGame.controller.js"></script>
+    <script src="javascript/PigGame/PigGame.view.js"></script>
+    <script src="javascript/PigGame/PigGame.model.js"></script>
 
 
     <!-- And off we go! -->
@@ -35,24 +38,60 @@
     </script>
 </head>
 <body>
+    <div class="container">
+        <div class="header clearfix">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="#">About</a></li>
+                    <li role="presentation"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Project name</h3>
+        </div>
 
-<h1>Pig Dice</h1>
+        <div class="jumbotron">
+            <h1>Jumbotron heading</h1>
+            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        </div>
+
+        <div class="row marketing">
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; Company 2014</p>
+        </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 
 
-<!-- configuration menu -->
-<div id="configuration">
-
-    <!-- TODO:  Put your configuration form / page here -->
-sdfsdfsdfsdf
-</div>
-
-<!-- ---------------------------------------------------------------------------------
-
-   The game
-
- ------------------------------------------------------------------------------- -->
-<div id="board" class="game_board">
-    <!-- TODO:  Put your game board here   -->
-</div>
 </body>
 </html>
