--- a/pigDiceGame.html
+++ b/pigDiceGame.html
@@ -40,20 +40,15 @@
 <body>
     <div class="container">
         <div class="header clearfix">
-            <nav>
-                <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a></li>
-                    <li role="presentation"><a href="#">About</a></li>
-                    <li role="presentation"><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Project name</h3>
+            <h1 class="text-muted">Pig Dice</h1>
         </div>
 
         <div class="jumbotron">
-            <h1>Jumbotron heading</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+            <img class="img-responsive" alt="dice" src="https://lh5.ggpht.com/YfqsGQ1Jln88BuMU6S9PLqu_x3-4vloVDBuAOIYmNgygJn66KaGG4BufAR7zkCkpRKA=w300">
+            <p>
+                <button type="button" class="btn btn-primary btn-lg">Role</button>
+                <button type="button" class="btn btn-success btn-lg">Pass</button>
+            </p>
         </div>
 
         <div class="row marketing">
@@ -80,9 +75,7 @@
             </div>
         </div>
 
-        <footer class="footer">
-            <p>&copy; Company 2014</p>
-        </footer>
+        <footer class="footer"></footer>
 
     </div> <!-- /container -->
 
