added player & game die classes

--- a/pigDiceGame.html
+++ b/pigDiceGame.html
@@ -38,7 +38,7 @@
     </script>
 </head>
 <body>
-    <div class="container">
+    <div class="container col-md-offset-3 col-md-6 col-md-offset-3">
         <div class="header clearfix">
             <h1>Pig Dice</h1>
         </div>
@@ -87,8 +87,9 @@
             <!-- START GAME DISPLAY -->
             <div class="hidden" id="game">
                 <div class="col-sm-12">
-                    <h1 class="red" id="dice">1</h1>
-                    <!--<img id="dice" src="dice/dice1.png" alt="dice">-->
+                    <div id="dice" class="four"></div>
+                    <!--<h1 class="red" id="dice">1</h1>-->
+                    <!--<img src="" alt="dice">-->
                 </div>
                 <!--<img class="img-responsive" alt="dice" src="https://lh5.ggpht.com/YfqsGQ1Jln88BuMU6S9PLqu_x3-4vloVDBuAOIYmNgygJn66KaGG4BufAR7zkCkpRKA=w300">-->
                 <p>
