--- a/pigDiceGame.html
+++ b/pigDiceGame.html
@@ -40,10 +40,10 @@
 <body>
     <div class="container col-md-offset-3 col-md-6 col-md-offset-3">
         <div class="header clearfix">
-            <h1>Pig Dice</h1>
+            <h2>Pig Dice</h2>
         </div>
 
-        <div class="jumbotron">
+        <div id="layout">
             <!-- START CONFIGURATION -->
             <form id="configuration" class="form-horizontal">
                 <div class="form-group">
@@ -93,11 +93,11 @@
                 </div>
                 <!--<img class="img-responsive" alt="dice" src="https://lh5.ggpht.com/YfqsGQ1Jln88BuMU6S9PLqu_x3-4vloVDBuAOIYmNgygJn66KaGG4BufAR7zkCkpRKA=w300">-->
                 <p>
-                    <button id="roll" type="button" class="btn btn-primary btn-lg">Roll</button>
-                    <button id="pass" type="button" class="btn btn-success btn-lg">Pass</button>
+                    <button id="roll" type="button" class="btn btn-primary btn-sm">Roll</button>
+                    <button id="pass" type="button" class="btn btn-success btn-sm">Pass</button>
                 </p>
-                <h2 class="red">Current Points: <span id="points"></span></h2>
-                <h2 class="red" id="error">Loss of turn.</h2>
+                <h3 class="red">Current Points: <span id="points"></span></h3>
+                <h3 class="red" id="error">Loss of turn.</h3>
             </div>
             <!-- END GAME DISPLAY -->
         </div>
@@ -105,25 +105,25 @@
         <!-- START GAME PROGRESS -->
         <div id="stats" class="hidden">
             <div class="player">
-                <h3 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h3>
+                <h4 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
                 </div>
             </div>
             <div class="player">
-                <h3 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h3>
+                <h4 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
                 </div>
             </div>
             <div class="player">
-                <h3 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h3>
+                <h4 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
                 </div>
             </div>
             <div class="player">
-                <h3 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h3>
+                <h4 class="title"><span class="glyphicon glyphicon-arrow-right"></span></h4>
                 <div class="progress">
                     <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
                 </div>
