--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Jasmine Spec Runner v2.1.2</title>
+    <meta charset="utf-8">
+    <title>Jasmine Spec Runner v2.1.2</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.1.2/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.1.2/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.1.2/jasmine_favicon.png">
+    <link rel="stylesheet" href="lib/jasmine-2.1.2/jasmine.css">
 
-  <script src="lib/jasmine-2.1.2/jasmine.js"></script>
-  <script src="lib/jasmine-2.1.2/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.1.2/boot.js"></script>
+    <script src="lib/jasmine-2.1.2/jasmine.js"></script>
+    <script src="lib/jasmine-2.1.2/jasmine-html.js"></script>
+    <script src="lib/jasmine-2.1.2/boot.js"></script>
 
-  <!-- include source files here... -->
-  <script src="../javascript/Player.js"></script>
-  <script src="../javascript/PigGame/PigGame.model.js"></script>
+    <!-- include source files here... -->
+    <script src="../javascript/Player.js"></script>
+    <script src="../javascript/PigGame/PigGame.model.js"></script>
+    <script src="../javascript/GameDie/GameDie.model.js"></script>
 
-  <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+    <!-- include spec files here... -->
+    <script src="spec/SpecHelper.js"></script>
+    <script src="spec/PlayerSpec.js"></script>
+    <script src="spec/PigDiceSpec.js"></script>
+    <script src="spec/GameSpec.js"></script>
 
 </head>
 
